--- a/style.css
+++ b/style.css
@@ -1,78 +1,75 @@
 *{
     margin: 0;
     font-family: Arial;
-    border: border-box;
+    border: 'box-box';
 }
-
-.nav-bar{
+.navbar{
     height: 60px;
-    background-color: #121921;
+    background-color: #0f1111;
     color: white;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
-
 .nav-logo{
     height: 50px;
-    width: 110px;
+    width: 100px;
 }
-
 .logo{
-    background-image: url('amazonLogo.png');
+    background-image: url('amazon_logo.png');
     background-size: cover;
     height: 50px;
     width: 100%;
 }
-
 .border{
     border: 2px solid transparent;
 }
 .border:hover{
     border: 2px solid white;
 }
+ 
+/* box...2 */
 
-
-/* box2......... */
-
-.add-icon{
-    display: flex;
-    align-items: center;
-}
-
-.addr-first{
+.add-first{
     font-size: 0.85rem;
     color: #cccccc;
     margin-left: 15px;
 }
-
-.addr-sec{
+.add-sec{
     font-size: 1rem;
     margin-left: 3px;
 }
+.add-icon{
+    display: flex;
+    text-align: center;
+}
 
+/* box...3 */
 
-/* box3...... */
 .nav-search{
     display: flex;
+    justify-content: space-evenly;
+    background-color: pink;
     width: 620px;
     height: 40px;
     border-radius: 4px;
 }
-.nav-search:hover{
-    border: #febd68 solid;
-}
+
 .search-select{
     background-color: #f3f3f3;
     width: 50px;
-    border-top-left-radius: 4px; 
-    border-bottom-left-radius: 4px; 
+    text-align: center;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
     border: none;
 }
 .search-input{
     width: 100%;
     font-size: 1rem;
     border: none;
+}
+.nav-search:hover{
+    border: 2px solid#febd68;
 }
 .search-icon{
     width: 45px;
@@ -82,50 +79,44 @@
     font-size: 1.2rem;
     background-color: #febd68;
     color: black;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
-
-
-/* box4..........box5......... */
-
 span{
     font-size: 0.7rem;
 }
 
-.nav-signin2{
+.nav-second{
     font-size: 0.85rem;
     font-weight: 700;
 }
 
-/* box6.......... */
-
 .nav-cart i{
     font-size: 30px;
 }
+
 .nav-cart{
     font-size: 0.85rem;
     font-weight: 700;
 }
 
-
-
-/* Panellll......................................... */
+/* pannel... */
 
 .panel{
-    display: flex;
     height: 40px;
     background-color: #222f3d;
+    display: flex;
     color: white;
-    justify-content: space-evenly;
     align-items: center;
-
+    justify-content: space-evenly;
 }
 
-.panel-options p{
-    display: inline;
-    margin-left: 15px;
+.panel-option p{
+    display: inline; 
+    margin-left: 15px;   
 }
 
-.panel-options{
+.panel-option{
     width: 70%;
     font-size: 0.85rem;
 }
@@ -135,39 +126,40 @@ span{
     font-weight: 700;
 }
 
-/* hero-section......... */
+/* hero section........... */
 
 .hero-section{
-    background-image: url('https://m.media-amazon.com/images/I/619geyiQI5L._SX3000_.jpg');
+    background-image: url(hero_image.jpg);
     background-size: cover;
     height: 350px;
     display: flex;
     justify-content: center;
     align-items: flex-end;
 }
+
 .hero-msg{
     background-color: white;
     color: black;
     height: 40px;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     font-size: 0.85rem;
-    width: 80%;
-    margin-bottom: 20px;
+    width: 90%;
+    margin-bottom: 15px;
 }
+
 .hero-msg a{
-    color: rgb(98, 98, 214);
+    color: #007185;
 }
 
-
-/* shop section....................... */
+/* shop section........ */
 
 .shop-section{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    background-color: #e2e6e7;
+    background-color: #e2e7e6;
 }
 .box{
     /* border: 2px solid black; */
@@ -175,19 +167,89 @@ span{
     width: 23%;
     background-color: white;
     padding: 20px 0px 15px;
-    margin-top: 5px;
+    margin-top: 15px;
 }
 
 .box-img{
     height: 300px;
-    background-size: cover;
+    background-size: cover; 
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
-.box-content {
+
+.box-content{
     margin-left: 1rem;
     margin-right: 1rem;
 }
+
 .box-content p{
-    color: rgb(98, 98, 214);
+    color: #007185;
+}
+
+/* footer........ */
+
+footer{
+    margin-top: 15px;
+}
+.foot-panel1{
+    background-color: #37475a;
+    color: white;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.5rem;
+}
+
+.foot-panel2{
+    background-color: #222f3d;
+    color: white;
+    height: 500px;
+    display: flex;
+    justify-content: space-evenly;
+
+}
+ul{
+    margin-top: 20px;
+}
+
+ul a{
+    display: block;
+    font-size: 0.85rem;
+    margin-top: 10px;
+    color: #dddddd;
+}
+
+.foot-panel3{
+    background-color: #222f3d;
+    color: white;
+    border-top: 0.5px solid white;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo{
+    background-image: url('amazon_logo.png');
+    background-size: cover;
+    height: 50px;
+    width: 100px;
+}
+
+.foot-panel4{
+    background-color: #0f1111;
+    color: white;
+    height: 100px;
+    font-size: 0.7rem;
+    text-align: center;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+}
+.pages{
+    padding-top: 25px;
+}
+.copyright{
+    padding-top: 5px;
 }
